Bug 153669 - Formula stops working after copy and paste onto a different cell
Summary: Formula stops working after copy and paste onto a different cell
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.5.1 release
Hardware: x86-64 (AMD64) All
: high major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.4....
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Paste
  Show dependency treegraph
 
Reported: 2023-02-16 15:10 UTC by Joao Carvalho
Modified: 2023-03-03 15:44 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
spreadsheet in which the problem appears (10.97 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-02-16 15:10 UTC, Joao Carvalho
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joao Carvalho 2023-02-16 15:10:17 UTC
Description:
Column F is set to display the sum of columns A through E. After I cut and paste text from cell E7 onto cell F7, sums on other cells in column F are no longer updated.

Steps to Reproduce:
1. Change value in cell E2 and see the sum in cell F2 gets updated.
2. Copy and paste the word "text" from cell E7 onto cell F7.
3. Change value in cell E2 and see the sum in cell F2 does not get updated.

Actual Results:
Sum in cell F2 does not get updated.

Expected Results:
Sum in cell F2 should be updated.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.4.5.1
Build ID: 40(Build:1)
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: pt-BR (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Joao Carvalho 2023-02-16 15:10:47 UTC
Created attachment 185408 [details]
spreadsheet in which the problem appears
Comment 2 ady 2023-02-16 19:10:58 UTC
repro in 7.4.5 on Windows too.

Recalculation seems halted, but there is no change in its status.

[F9] updates value again, but it has to be pressed after each change.

Extending the formula again from cell F2 down and changing cell E2 (or pressing [F9] on cell F2) will trigger automatic recalculation again for these cells.

Emphasize: AutoCalculate seems always on, but it effectively changes, with no knowledge of/to the user.
Comment 3 Werner Tietz 2023-02-16 20:18:30 UTC
Cannot confirm|reproduce with:
```
Version: 7.0.4.2
Build ID: 00(Build:2)
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Raspbian package version: 1:7.0.4-4+rpi1+deb11u3
Calc: threaded
```
Comment 4 Xisco Faulí 2023-02-17 09:42:22 UTC
Regression introduced by:

author	Kohei Yoshida <kohei@libreoffice.org>	2022-01-31 22:45:21 -0500
committer	Kohei Yoshida <kohei@libreoffice.org>	2022-02-04 02:40:49 +0100
commit 703fb7739a5e604d90e147db6f67917b8d141150 (patch)
tree b2e4a822ba77b68493ba48a6ea5b0c15f9d7d0e5
parent 80723fccbb03c215bab84b10ac1eefaedef66b7c (diff)
tdf#146795: Make sure to use valid position hints to avoid crash.

Bisected with: bibisect-linux64-7.4

Adding Cc: to Kohei Yoshida
Comment 5 stragu 2023-02-17 22:14:29 UTC
Crash in bug 148143 is also a regression from the same commit.

Following the same steps but pasting unformatted text does not trigger the bug. Pasting with paste special > Text does trigger the bug.

Version: 7.4.5.1 / LibreOffice Community
Build ID: 9c0871452b3918c1019dde9bfac75448afc4b57f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 6 Kohei Yoshida 2023-02-27 01:22:40 UTC
I'm looking into it.
Comment 7 Commit Notification 2023-02-28 03:46:38 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e83c243018c1c7f6662f9a8ecdc731c5c071ea31

tdf#153669: Track formulas that stopped listening ...

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-02-28 21:14:04 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/33b6c065a1629afd36c9ae0fe5daa18b972620e5

tdf#153669: Track formulas that stopped listening ...

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-03-01 14:08:55 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/268ab12ef987f0c1d34db78060ac6b80f25d9408

tdf#153669: Track formulas that stopped listening ...

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-03-01 16:36:08 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3fa61383b51180c17154a9d5762c22b7d436df65

tdf#153669: sc_uicalc: Add unittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 ady 2023-03-02 14:40:04 UTC
FWIW, OK as of:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 46e74a8bf03c06776cb144418206db7c4b843b41
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (es_AR); UI: en-US
Calc: CL threaded
Built 2023.03.02
Comment 12 Kohei Yoshida 2023-03-02 23:56:07 UTC
I'll mark this as fixed.
Comment 13 Commit Notification 2023-03-03 15:44:14 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-6":

https://git.libreoffice.org/core/commit/cc66f335931b9cf088805bfc4cab25bb8cc4ee44

tdf#153669: Track formulas that stopped listening ...

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.